--- a/Rahasia-Pola-Jejer3.html
+++ b/Rahasia-Pola-Jejer3.html
@@ -11,7 +11,7 @@
     <link rel="preload" as="script" href="https://cdn.ampproject.org/v0.js">
     <link rel="preconnect dns-prefetch" href="https://fonts.gstatic.com/" crossorigin>
     <meta name="robots" content="index, follow" />
-    <link rel="canonical" href="###link###">
+    <link rel="canonical" href="https://putaran-mahjong.github.io/Rahasia-Pola/Rahasia-Pola-Jejer3.html">
     <link rel="shortcut icon"
         href="https://confident-tesla.b-cdn.net/Teq9dexfQKsJlYZVWxoYdpxlJDA/assets/favicons/favicon-96.png">
     <link rel="apple-touch-icon-precomposed"
@@ -33,7 +33,7 @@
     <meta property="og:type" content="website">
     <meta property="og:title" content="Rahasia Main Mudah Jackpot Mahjong - Dapatkan Mudah Bonus Hingga Jutaan Rupiah.">
     <meta property="og:description" content="Rahasia mendapatkan Scatter Jejer 3 di slot Mahjong Ways dengan RTP gacor">
-    <meta property="og:url" content="###link###">
+    <meta property="og:url" content="https://putaran-mahjong.github.io/Rahasia-Pola/Rahasia-Pola-Jejer3.html">
     <meta property="og:site_name" content="GGBET188" />
     <meta property="article:modified_time" content="2025-2-9T19:10:10+00:00" />
     <meta property="og:image" content="https://putaran-mahjong.github.io/Rahasia-Pola/As/BN4.jpg">
@@ -41,7 +41,7 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Rahasia Main Mudah Jackpot Mahjong - Dapatkan Mudah Bonus Hingga Jutaan Rupiah.">
     <meta name="twitter:description" content="Rahasia mendapatkan Scatter Jejer 3 di slot Mahjong Ways dengan RTP gacor">
-    <meta name="twitter:url" content="###link###">
+    <meta name="twitter:url" content="https://putaran-mahjong.github.io/Rahasia-Pola/Rahasia-Pola-Jejer3.html">
     <meta name="twitter:image" content="https://putaran-mahjong.github.io/Rahasia-Pola/As/BN4.jpg">
     <meta name="twitter:label1" content="Estimasi waktu membaca" />
     <meta name="twitter:data1" content="8 Menit" />
@@ -747,7 +747,7 @@
             "@type": "NewsArticle",
             "mainEntityOfPage": {
                 "@type": "WebPage",
-                "@id": "###link###"
+                "@id": "https://putaran-mahjong.github.io/Rahasia-Pola/Rahasia-Pola-Jejer3.html"
             },
             "headline": "Rahasia Main Mudah Jackpot Mahjong - Dapatkan Mudah Bonus Hingga Jutaan Rupiah.",
             "image": {
@@ -759,7 +759,7 @@
             "author": {
                 "@type": "Person",
                 "name": "GGBET188",
-                "url": "###link###"
+                "url": "https://putaran-mahjong.github.io/Rahasia-Pola/Rahasia-Pola-Jejer3.html"
             },
             "publisher": {
                 "@type": "Organization",
@@ -777,7 +777,7 @@
 <body>
     <header>
         <div class="header-wrapper">
-            <div class="logo"> <a href="###link###">
+            <div class="logo"> <a href="https://putaran-mahjong.github.io/Rahasia-Pola/Rahasia-Pola-Jejer3.html">
                     <amp-img src="https://putaran-mahjong.github.io/Rahasia-Pola/As/LOGOGGBET188.webp"
                         width="350" height="85" alt="Rahasia Main Mudah Jackpot" layout="fixed"></amp-img>
                 </a> </div>
@@ -877,7 +877,7 @@
     </main>
     <footer>
         <div class="container">
-            <div class="footer-text">&copy; 2024 <a href="###link###">Rahasia Main Mudah Jackpot</a>. All Rights Reserved. 18+
+            <div class="footer-text">&copy; 2024 <a href="https://putaran-mahjong.github.io/Rahasia-Pola/Rahasia-Pola-Jejer3.html">Rahasia Main Mudah Jackpot</a>. All Rights Reserved. 18+
             </div>
         </div>
     </footer>
